Trying to fix navbar squishing on mobile

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -2,10 +2,12 @@
   ul {
     list-style: none;
     text-align: right;
+    padding: 1em;
   }
 
   li {
     display: inline-block;
     margin-left: 10px;
+    padding: 1em;
   }
 }
